// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stateful async tests Merges skipped validations from previous suite 1`] = `
Object {
  "done": [Function],
  "errorCount": 1,
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": Object {
    "group": Object {
      "field_1": Object {
        "errorCount": 0,
        "testCount": 0,
        "warnCount": 0,
      },
      "field_4": Object {
        "errorCount": 0,
        "testCount": 0,
        "warnCount": 0,
      },
    },
  },
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "isValid": [Function],
  "suiteName": undefined,
  "testCount": 3,
  "tests": Object {
    "field_1": Object {
      "errorCount": 1,
      "errors": Array [
        "field_message_1",
      ],
      "testCount": 1,
      "warnCount": 0,
    },
    "field_2": Object {
      "errorCount": 0,
      "testCount": 2,
      "warnCount": 0,
    },
    "field_3": Object {
      "errorCount": 0,
      "testCount": 0,
      "warnCount": 0,
    },
    "field_4": Object {
      "errorCount": 0,
      "testCount": 0,
      "warnCount": 0,
    },
  },
  "warnCount": 0,
}
`;

exports[`Stateful async tests Merges skipped validations from previous suite 2`] = `
Object {
  "errorCount": 2,
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": Object {
    "group": Object {
      "field_1": Object {
        "errorCount": 0,
        "testCount": 0,
        "warnCount": 0,
      },
      "field_4": Object {
        "errorCount": 0,
        "testCount": 0,
        "warnCount": 0,
      },
    },
  },
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "isValid": [Function],
  "suiteName": undefined,
  "testCount": 3,
  "tests": Object {
    "field_1": Object {
      "errorCount": 1,
      "errors": Array [
        "field_message_1",
      ],
      "testCount": 1,
      "warnCount": 0,
    },
    "field_2": Object {
      "errorCount": 1,
      "errors": Array [
        "rejection_message_1",
      ],
      "testCount": 2,
      "warnCount": 0,
    },
    "field_3": Object {
      "errorCount": 0,
      "testCount": 0,
      "warnCount": 0,
    },
    "field_4": Object {
      "errorCount": 0,
      "testCount": 0,
      "warnCount": 0,
    },
  },
  "warnCount": 0,
}
`;

exports[`Stateful async tests Merges skipped validations from previous suite 3`] = `
Object {
  "errorCount": 5,
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": Object {
    "group": Object {
      "field_1": Object {
        "errorCount": 1,
        "errors": Array [
          "field_1_group_message",
        ],
        "testCount": 1,
        "warnCount": 0,
      },
      "field_4": Object {
        "errorCount": 1,
        "errors": Array [
          "field_4_group_message",
        ],
        "testCount": 1,
        "warnCount": 0,
      },
    },
  },
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "isValid": [Function],
  "suiteName": undefined,
  "testCount": 7,
  "tests": Object {
    "field_1": Object {
      "errorCount": 2,
      "errors": Array [
        "field_1_group_message",
        "field_message_1",
      ],
      "testCount": 2,
      "warnCount": 0,
    },
    "field_2": Object {
      "errorCount": 1,
      "errors": Array [
        "rejection_message_1",
      ],
      "testCount": 2,
      "warnCount": 0,
    },
    "field_3": Object {
      "errorCount": 1,
      "errors": Array [
        "field_message_3",
      ],
      "testCount": 2,
      "warnCount": 0,
    },
    "field_4": Object {
      "errorCount": 1,
      "errors": Array [
        "field_4_group_message",
      ],
      "testCount": 1,
      "warnCount": 0,
    },
  },
  "warnCount": 0,
}
`;
